--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -15,7 +15,7 @@
   <body>
 
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">Basic Boots</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,7 +37,7 @@
             </li>
           </ul>
           <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <input class="form-control sm" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-link" type="submit"><span class="material-symbols-outlined">search</span></button>
           </form>
         </div>
