--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -26,21 +26,21 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Shop</a>
+              <a class="nav-link " href="./shop.html">Shop</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Impressum</a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="#"><span id="shopping-cart-logo" class="material-symbols-outlined d-inline-block align-text-top">shopping_cart</span></a>
+              <a class="nav-link" href="./warenkorb.html"><span id="shopping-cart-logo" class="material-symbols-outlined d-inline-block align-text-top">shopping_cart</span></a>
             </li>
           </ul>
           <form class="d-flex">
             <input class="form-control sm" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-link" type="submit"><span class="material-symbols-outlined">search</span></button>
+            <button class="btn btn-link" type="submit"><span class="material-symbols-outlined search">search</span></button>
           </form>
         </div>
       </div>
