--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -32,7 +32,7 @@
               <a class="nav-link " href="./shop.html">Shop</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Impressum</a>
+              <a class="nav-link" href="./imprint.html">Impressum</a>
             </li>
             <li class="nav-item ">
               <a class="nav-link" href="./warenkorb.html"><span id="shopping-cart-logo" class="material-symbols-outlined d-inline-block align-text-top">shopping_cart</span></a>
