--- a/Lab1/imprint.html
+++ b/Lab1/imprint.html
@@ -29,13 +29,13 @@
           <a class="nav-link " aria-current="page" href="./index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./shop.html">Shop</a>
+          <a class="nav-link " href="./shop.html">Shop</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./imprint.html">Impressum</a>
+          <a class="nav-link active" href="./imprint.html">Impressum</a>
         </li>
-        <li class="nav-item active">
-          <a class="nav-link active" href="./warenkorb.html"><span id="shopping-cart-logo" class="material-symbols-outlined d-inline-block align-text-top">shopping_cart</span></a>
+        <li class="nav-item ">
+          <a class="nav-link" href="./warenkorb.html"><span id="shopping-cart-logo" class="material-symbols-outlined d-inline-block align-text-top">shopping_cart</span></a>
         </li>
       </ul>
       <form class="d-flex">
