--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -85,9 +85,47 @@
           </button>
         </div>
 
-
+        <div id="to_shop">
+          <h2>Hier gehts zum Webshop:</h2>
+          <button type="button" id="shop_btn" class="btn btn-primary btn-lg">Shop</button>
+        </div>
 
       </div>
+    </div>
+
+
+    <div class="d-flex flex-column h-100" id="footer">
+      <!-- FOOTER -->
+      <footer class="w-100 py-4 flex-shrink-0">
+        <div class="container py-4">
+          <div class="row gy-4 gx-5">
+            <div class="col-lg-4 col-md-6">
+              <h5 class="h1 text-white">Basic Boots</h5>
+              <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+              <p class="small text-muted mb-0">&copy; Copyrights. All rights reserved. <a class="text-primary" href="#">BasicBoots.com</a></p>
+            </div>
+            <div class="col-lg-2 col-md-6">
+              <h5 class="text-white mb-3">Quick links</h5>
+              <ul class="list-unstyled text-muted">
+                <li><a href="./index.html">Home</a></li>
+                <li><a href="./shop.html">Shop</a></li>
+                <li><a href="./imprint.html">Impressum</a></li>
+                <li><a href="./warenkorb.html">Warenkorb</a></li>
+              </ul>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <h5 class="text-white mb-3">Newsletter</h5>
+              <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
+              <form action="#">
+                <div class="input-group mb-3">
+                  <input class="form-control" type="e-mail" placeholder="E-Mail" aria-label="Recipient's username" aria-describedby="button-addon2">
+                  <button class="btn btn-primary" id="button-addon2" type="button"><span class="material-symbols-outlined">send</span></button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
 
     <!--Bootstrap Scrip-->
