--- a/Lab1/index.html
+++ b/Lab1/index.html
@@ -87,7 +87,7 @@
 
         <div id="to_shop">
           <h2>Hier gehts zum Webshop:</h2>
-          <button type="button" id="shop_btn" class="btn btn-primary btn-lg">Shop</button>
+          <a href="shop.html"> <button type="button" id="shop_btn" class="btn btn-primary btn-lg">Shop</button></a>
         </div>
 
       </div>
