--- a/Lab1/shop.html
+++ b/Lab1/shop.html
@@ -52,9 +52,43 @@
 
     <!--Hauptteil-->
 
-    <div class="container">
-      <div class="row">
+    <div class="container text-center">
+      <div class="row product">
+        <div class="col">
+          Column
+        </div>
+        <div class="col">
+          Column
+        </div>
+        <div class="col">
+          Column
+        </div>
+      </div>
 
+
+      <div class="row product">
+        <div class="col">
+          Column
+        </div>
+        <div class="col">
+          Column
+        </div>
+        <div class="col">
+          Column
+        </div>
+      </div>
+
+
+      <div class="row product">
+        <div class="col">
+          Column
+        </div>
+        <div class="col">
+          Column
+        </div>
+        <div class="col">
+          Column
+        </div>
       </div>
     </div>
 
