--- a/Lab1/shop.html
+++ b/Lab1/shop.html
@@ -55,7 +55,7 @@
     <div class="container text-center">
       <div class="row product">
         <div class="col">
-          Column
+          <img src="media/shop_img1.png" alt="shoes">
         </div>
         <div class="col">
           Column
@@ -68,7 +68,7 @@
 
       <div class="row product">
         <div class="col">
-          Column
+          <img src="media/shop_img2.png" alt="shoes">
         </div>
         <div class="col">
           Column
@@ -81,7 +81,7 @@
 
       <div class="row product">
         <div class="col">
-          Column
+          <img src="media/shop_img3.png" alt="shoes">
         </div>
         <div class="col">
           Column
