--- a/Lab1/shop.html
+++ b/Lab1/shop.html
@@ -52,47 +52,59 @@
 
     <!--Hauptteil-->
 
-    <div class="container text-center">
-      <div class="row product">
+    <div class="container text-center " id="product">
+      <div class="row row-cols-1 row-cols-sm-3 products">
         <div class="col">
-          <img src="media/shop_img1.png" alt="shoes">
+          <img src="media/shop_img1.png" width="200" height="200" alt="shoes">
         </div>
         <div class="col">
-          Column
+          <h3>Laufschuhe</h3>
+          <p>Schuhe für jede Lebenssituation,
+            egal ob Schmall, Regen oder Sonnenschein diese Schuhe
+            lassen sie niemals im stich!</p>
         </div>
         <div class="col">
-          Column
+          <div class="price" >320,20€</div>
+          <button type="button" class="btn btn-secondary">Zum Warenkorb hinzufügen</button>
+        </div>
+      </div>
+
+      <div class="row row-cols-1 row-cols-sm-3 products">
+        <div class="col">
+          <img src="media/shop_img2.png" width="200" height="200" alt="shoes">
+        </div>
+        <div class="col">
+          <h3>Winterstiefel</h3>
+          <p>Besonders gut für die kalten Jahreszeiten
+          bis in den tiefsten Winter! Auf diese Schuhe
+          ist immer verlass!</p>
+        </div>
+        <div class="col">
+          <div class="price" >60,99€</div>
+          <button type="button" class="btn btn-secondary">Zum Warenkorb hinzufügen</button>
         </div>
       </div>
 
 
-      <div class="row product">
+      <div class="row row-cols-1 row-cols-sm-3 products">
         <div class="col">
-          <img src="media/shop_img2.png" alt="shoes">
+          <img src="media/shop_img3.png" width="200" height="200" alt="shoes">
         </div>
         <div class="col">
-          Column
+          <h3>Moomboots</h3>
+          <p>Schuhe von der bekannten Marke Moomboots
+          am besten geeignet für das schnelle an- und ausziehen
+          damit sie auch im Winter bei Müll entsorgen keine
+          kalten Füße bekommen</p>
         </div>
         <div class="col">
-          Column
+          <div class="price" >112,99€</div>
+          <button type="button" class="btn btn-secondary">Zum Warenkorb hinzufügen</button>
         </div>
       </div>
 
 
-      <div class="row product">
-        <div class="col">
-          <img src="media/shop_img3.png" alt="shoes">
-        </div>
-        <div class="col">
-          Column
-        </div>
-        <div class="col">
-          Column
-        </div>
-      </div>
     </div>
-
-
     <div class="d-flex flex-column h-100" id="footer">
       <!-- FOOTER -->
       <footer class="w-100 py-4 flex-shrink-0">
@@ -127,8 +139,8 @@
       </footer>
     </div>
 
-<!--Bootstrap Scrip-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!--Bootstrap Scrip-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
 
