--- a/Lab1/shop.html
+++ b/Lab1/shop.html
@@ -65,7 +65,7 @@
         </div>
         <div class="col">
           <div class="price" >320,20€</div>
-          <button type="button" class="btn btn-secondary">Zum Warenkorb hinzufügen</button>
+          <button type="button" class="btn btn-secondary" onclick="addItem(1);">Zum Warenkorb hinzufügen</button>
         </div>
       </div>
 
@@ -81,7 +81,7 @@
         </div>
         <div class="col">
           <div class="price" >60,99€</div>
-          <button type="button" class="btn btn-secondary">Zum Warenkorb hinzufügen</button>
+          <button type="button" class="btn btn-secondary " onclick="addItem(2);">Zum Warenkorb hinzufügen</button>
         </div>
       </div>
 
@@ -99,7 +99,7 @@
         </div>
         <div class="col">
           <div class="price" >112,99€</div>
-          <button type="button" class="btn btn-secondary">Zum Warenkorb hinzufügen</button>
+          <button type="button" class="btn btn-secondary" onclick="addItem(3);">Zum Warenkorb hinzufügen</button>
         </div>
       </div>
 
@@ -140,6 +140,7 @@
     </div>
 
     <!--Bootstrap Scrip-->
+    <script type="text/javascript" src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
