Shop done missing Badge for Item Amount and drag/drop function

--- a/Lab1/shop.html
+++ b/Lab1/shop.html
@@ -37,8 +37,8 @@
             <li class="nav-item">
               <a class="nav-link" href="./imprint.html">Impressum</a>
             </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="./warenkorb.html"><span id="shopping-cart-logo" class="material-symbols-outlined d-inline-block align-text-top">shopping_cart</span></a>
+            <li class="nav-item">
+              <a class="nav-link" href="./warenkorb.html"><span id="shopping-cart-logo" class="material-symbols-outlined d-inline-block align-text-top">shopping_cart</span><span id="count_badge" class="my_badge badge-pill badge-light"></span></a>
             </li>
           </ul>
           <form class="d-flex">
