--- a/Lab1/imprint.html
+++ b/Lab1/imprint.html
@@ -17,7 +17,7 @@
 
     <title>Basic Boots</title>
   </head>
-  <body>
+  <body onload="set_amount()">
 
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
@@ -38,7 +38,7 @@
               <a class="nav-link active" href="./imprint.html">Impressum</a>
             </li>
             <li class="nav-item ">
-              <a class="nav-link" href="./warenkorb.html"><span id="shopping-cart-logo" class="material-symbols-outlined d-inline-block align-text-top">shopping_cart</span></a>
+              <a class="nav-link" href="./warenkorb.html"><span id="shopping-cart-logo" class="material-symbols-outlined d-inline-block align-text-top">shopping_cart</span><span id="count_badge" class="my_badge badge-pill badge-light"></span></a>
             </li>
           </ul>
           <form class="d-flex">
