--- a/Lab1/shop.html
+++ b/Lab1/shop.html
@@ -17,7 +17,7 @@
 
     <title>Basic Boots</title>
   </head>
-  <body>
+  <body onload="set_amount()">
 
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
