--- a/Lab1/imprint.html
+++ b/Lab1/imprint.html
@@ -20,9 +20,9 @@
   <body onload="set_amount()">
 
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark ">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img alt="Boot" id="logo" src="media/white_boot.png" width="30" height="30">Basic Boots</a>
+        <a class="navbar-brand" href="./index.html"><img alt="Boot" id="logo" src="media/white_boot.png" width="30" height="30">Basic Boots</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -82,7 +82,7 @@
               <p class="small text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt.</p>
               <form action="#">
                 <div class="input-group mb-3">
-                  <input class="form-control" type="e-mail" placeholder="E-Mail" aria-label="Recipient's username" aria-describedby="button-addon2">
+                  <input class="form-control" type="text" placeholder="E-Mail" aria-label="Recipient's username" aria-describedby="button-addon2">
                   <button class="btn btn-primary" id="button-addon2" type="button"><span class="material-symbols-outlined">send</span></button>
                 </div>
               </form>
